# something

./: .gitignore  README.md
bash_find_and_count/: README.md  find-and-count.sh
bash_find_and_count/test-files/: 11file.c.txt.c
cpp/: CMakeLists.txt  assembly.md  test.cpp
is_even/cpp/: README.md  is_even.cpp  is_even.hpp
py/: README.md  is_even.py
